<!--
  ~ Copyright (C) 2018 Nitesh Tiwari.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">Android-percent-layout-sample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fifty_fifty_text">50%-50%</string>
    <string name="fifty_hundred_text">50%-100%</string>
    <string name="twenty_fifty">20%-50%</string>
    <string name="thirty_fifty">30%-50%</string>
    <string name="ten_fifty">10%-50%</string>
    <string name="twenty_hundred_tv">25%-50%</string>
    <string name="fifty_five_hundred_tv">55%-50%</string>
    <string name="fifty_seventy_tv">50%-70%</string>
    <string name="chaining">Chainning</string>
    <string name="ratios">Ratios</string>
    <string name="bottom_right_text">Bottom Right</string>
    <string name="bottom_left_text">Bottom Left</string>
    <string name="top_right_text">Top Right</string>
    <string name="top_left_text">Top Left</string>
</resources>
