<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fifty_thirty"
        style="@style/STYLE_CONSTRAINT_PERCENT_TV"
        android:background="#ffff8800"
        android:text="@string/fifty_fifty_text"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/fifty_twenty_tv"
        style="@style/STYLE_CONSTRAINT_PERCENT_TV"
        android:background="#ffff5566"
        android:text="@string/twenty_fifty"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toRightOf="@id/fifty_thirty"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/fifty_thirty_tv"
        style="@style/STYLE_CONSTRAINT_PERCENT_TV"
        android:layout_below="@id/fifty_twenty_tv"
        android:background="#aa3628cc"
        android:text="@string/thirty_fifty"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toRightOf="@id/fifty_thirty"
        app:layout_constraintTop_toBottomOf="@id/fifty_twenty_tv"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/hundred_fifty_tv"
        style="@style/STYLE_CONSTRAINT_PERCENT_TV"
        android:background="#aacacc46"
        android:text="@string/fifty_hundred_text"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/fifty_thirty"
        app:layout_constraintWidth_percent="1" />
</android.support.constraint.ConstraintLayout>